# myapps

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  LICENSE  Makefile  README.md  build.rs  deploy.sh  models  playwright.config.ts  worktree.sh
.cargo/: audit.toml
.claude/: settings.json
.claude/agents/: frontend-tester.md
.claude/commands/: add-app.md  finish-development.md  frontend-walkthrough.md
.github/: dependabot.yml
.github/workflows/: audit.yml  cd.yml  ci.yml
benchmarks/prompt-cache-bench/: prompt-cache-bench.sh  results-2026-03-23-qwen2.5-1.5b-m1pro.md  results-2026-03-23-qwen2.5-1.5b-odroid-n2.md  results-2026-03-23-qwen3.5-2b-m1pro.md
crates/myapps-classroom-input/: Cargo.toml  README.md
crates/myapps-classroom-input/migrations/: 20240204000000_classroom_input.sql
crates/myapps-classroom-input/src/: classrooms.rs  form_types.rs  i18n.rs  inputs.rs  lib.rs  ops.rs
crates/myapps-classroom-input/static/: style.css
crates/myapps-classroom-input/tests/: integration.rs
crates/myapps-core/: Cargo.toml
crates/myapps-core/migrations/: 20240101000000_core.sql  20260413000000_push_notifications.sql
crates/myapps-core/src/: cli.rs  components.rs  config.rs  db.rs  layout.rs  lib.rs  registry.rs
crates/myapps-core/src/auth/: mod.rs
crates/myapps-core/src/command/: llm.rs  mod.rs  routes.rs
crates/myapps-core/src/i18n/: en.rs  es.rs  mod.rs
crates/myapps-core/src/models/: mod.rs  user.rs  user_app_visibility.rs  user_settings.rs
crates/myapps-core/src/routes/: auth.rs  invite.rs  launcher.rs  mod.rs  pwa.rs  settings.rs
crates/myapps-core/src/services/: mod.rs  notify.rs
crates/myapps-form-input/: Cargo.toml  README.md
crates/myapps-form-input/migrations/: 20240204000000_form_input.sql  (+1 more)
crates/myapps-leanfin/: Cargo.toml  README.md
crates/myapps-leanfin/migrations/: 20240201000000_leanfin.sql  20260404000000_account_color.sql  20260516010000_snapshot_upsert.sql
crates/myapps-leanfin/src/: accounts.rs  balance_evolution.rs  dashboard.rs  expenses.rs  i18n.rs  labels.rs  lib.rs  ops.rs  settings.rs  sync_handler.rs  transactions.rs
crates/myapps-leanfin/src/models/: account.rs  label.rs  mod.rs  transaction.rs
crates/myapps-leanfin/src/services/: balance.rs  csv_import.rs  enable_banking.rs  expenses.rs  labeling.rs  seed.rs  sync.rs
crates/myapps-leanfin/static/: style.css
crates/myapps-leanfin/tests/: integration.rs
crates/myapps-leanfin/tests/leanfin/: accounts.rs  balance.rs  balance_evolution.rs  csv_import.rs  expenses.rs  labels.rs  manual_accounts.rs  sync.rs  transactions.rs
crates/myapps-mindflow/: Cargo.toml  README.md
crates/myapps-mindflow/migrations/: 20240202000000_mindflow.sql
crates/myapps-mindflow/src/: actions.rs  categories.rs  i18n.rs  inbox.rs  lib.rs  mind_map.rs  ops.rs  thoughts.rs
crates/myapps-mindflow/src/services/: seed.rs
crates/myapps-mindflow/static/: style.css
crates/myapps-mindflow/tests/: integration.rs
crates/myapps-mindflow/tests/mindflow/: actions.rs  categories.rs  inbox.rs  mind_map.rs  thoughts.rs
crates/myapps-notes/: Cargo.toml  README.md
crates/myapps-notes/migrations/: 20260323000000_notes.sql  20260505000000_offline_mode.sql  20260516000000_title_in_crdt.sql
crates/myapps-notes/src/: i18n.rs  lib.rs  notes.rs  ops.rs  sync.rs
crates/myapps-notes/src/services/: seed.rs
crates/myapps-notes/static/: style.css
crates/myapps-notes/tests/: integration.rs
crates/myapps-notes/tests/notes/: notes.rs  sync.rs
crates/myapps-test-harness/: Cargo.toml
crates/myapps-voice-to-text/: Cargo.toml  README.md
crates/myapps-voice-to-text/migrations/: 20240203000000_voice_to_text.sql
crates/myapps-voice-to-text/src/: dashboard.rs  i18n.rs  jobs.rs  lib.rs  ops.rs
crates/myapps-voice-to-text/src/services/: worker.rs
crates/myapps-voice-to-text/static/: style.css
crates/myapps-voice-to-text/tests/: integration.rs
crates/myapps-voice-to-text/tests/voice_to_text/: dashboard.rs  jobs.rs
deploy/: prod.env.example  stage.env.example
docs/: architecture.md  deployment.md  ideas-01-cross-compilation-ci.md  requirements.md  worktree-workflow.md
migrations/: 20240101000000_initial.sql  20240103000000_pending_links.sql  20240104000000_allocations.sql  20240105000000_pending_links_reauth.sql  20240106000000_account_balances.sql  20240111000000_api_payloads.sql  20240112000000_balance_snapshots.sql  20240115000000_mindflow.sql  20240116000000_mindflow_nested_thoughts.sql  20240117000000_voice_jobs.sql  20240118000000_push_subscriptions.sql  20240119000000_user_app_visibility.sql  20240121000000_classroom_input.sql  20240122000000_cascade_user_deletes.sql  20240123000000_user_language.sql  20240124000000_invites.sql  20240125000000_user_last_active.sql  20240126000000_rename_app_table_prefixes.sql
scripts/: leanfin-debug-balance.sh  screenshots.ts  take-screenshots.sh
src/: config.rs  db.rs  layout.rs  lib.rs  main.rs
src/apps/: mod.rs  registry.rs
src/auth/: mod.rs
src/command/: mod.rs  routes.rs
src/i18n/: en.rs  es.rs  mod.rs
src/models/: account.rs  invite.rs  label.rs  mod.rs  transaction.rs
src/routes/: accounts.rs  auth.rs  dashboard.rs  invite.rs  labels.rs  launcher.rs  mod.rs  pwa.rs  transactions.rs
src/services/: enable_banking.rs  labeling.rs  mod.rs  notify.rs  sync.rs  whisper.rs
src/templates/: dashboard.html  login.html
static/: core.css  manifest.json  notes-editor.js  notes-tiptap-bootstrap.js  notes-vendor.bundle.js  style.css  sw.js
tests/: auth_tests.rs  classroom_input.rs  label_tests.rs  leanfin.rs  mindflow.rs  transaction_tests.rs  voice_to_text.rs
tests/classroom_input/: classrooms.rs  form_types.rs  inputs.rs
tests/harness/: mod.rs
tests/leanfin/: accounts.rs  balance_evolution.rs  csv_import.rs  expenses.rs  labels.rs  manual_accounts.rs  sync.rs  transactions.rs
tests/mindflow/: actions.rs  categories.rs  inbox.rs  mind_map.rs  thoughts.rs
tests/voice_to_text/: dashboard.rs  jobs.rs
tools/notes-vendor/: README.md  build.sh  entry.js  package-lock.json  package.json
(+74 files in other folders)
