[package]
name = "myapps"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart"] }
csv = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
tower-http = { version = "0.6", features = ["fs"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }

# Auth
argon2 = "0.5"
rand = "0.9"
rand_core_06 = { package = "rand_core", version = "0.6", features = ["getrandom"] }
hex = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (Enable Banking API, Web Push notifications)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Web Push notifications
web-push = "0.11"
base64 = "0.22"

# CLI
clap = { version = "4", features = ["derive"] }

# Config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Cookie/session
tower-cookies = "0.11"

# JWT signing (Enable Banking API auth)
jsonwebtoken = "9"

# Error handling
anyhow = "1"
thiserror = "2"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# URL parsing
url = "2"

[dev-dependencies]
axum-test = "19"
