[workspace]
members = ["crates/*", "."]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
axum = { version = "0.8", features = ["multipart"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tower-cookies = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
uuid = { version = "1", features = ["v4"] }
axum-test = { version = "19", features = ["ws"] }

myapps-core = { path = "crates/myapps-core" }
myapps-leanfin = { path = "crates/myapps-leanfin" }
myapps-mindflow = { path = "crates/myapps-mindflow" }
myapps-voice-to-text = { path = "crates/myapps-voice-to-text" }
myapps-form-input = { path = "crates/myapps-form-input" }
myapps-notes = { path = "crates/myapps-notes" }
myapps-test-harness = { path = "crates/myapps-test-harness" }

[package]
name = "myapps"
version = "0.13.0"
edition.workspace = true

[features]
vendored-openssl = ["dep:openssl"]

[dependencies]
openssl = { version = "0.10", features = ["vendored"], optional = true }
myapps-core.workspace = true
myapps-leanfin.workspace = true
myapps-mindflow.workspace = true
myapps-voice-to-text.workspace = true
myapps-form-input.workspace = true
myapps-notes.workspace = true

clap = { version = "4", features = ["derive"] }
tokio.workspace = true
anyhow.workspace = true

[build-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
axum-test.workspace = true
serde_json.workspace = true
sqlx.workspace = true
chrono.workspace = true
