[package]
name = "myapps-mindflow"
version = "0.1.0"
edition.workspace = true

[dependencies]
myapps-core.workspace = true
axum.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
myapps-test-harness.workspace = true
tokio.workspace = true
sqlx.workspace = true
serde_json.workspace = true
