[package]
name = "myapps-notes"
version = "0.1.0"
edition.workspace = true

[dependencies]
myapps-core.workspace = true
axum = { workspace = true, features = ["ws"] }
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
tokio = { workspace = true, features = ["sync"] }
yrs = "0.26"
futures-util = "0.3"

[dev-dependencies]
myapps-test-harness.workspace = true
tokio.workspace = true
sqlx.workspace = true
serde_json.workspace = true
axum-test.workspace = true
