[package]
name = "myapps-voice-to-text"
version = "0.1.0"
edition.workspace = true

[dependencies]
myapps-core.workspace = true
axum.workspace = true
sqlx.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
uuid.workspace = true

[dev-dependencies]
myapps-test-harness.workspace = true
tokio.workspace = true
sqlx.workspace = true
serde_json.workspace = true
